test/functions/whereClauses/whereClauseReal.good
whereClauseReal.chpl:3: In function 'wrong':
whereClauseReal.chpl:3: error: a 'where' clause expression must evaluate to a 'param bool', but got a 'param real(64)' instead
